<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_menu_account"
            android:title="@string/menu_account" />
        <item
            android:id="@+id/nav_add_entry"
            android:icon="@drawable/ic_menu_add"
            android:title="@string/menu_add_entry" />
        <item
            android:id="@+id/nav_apply_leave"
            android:icon="@drawable/ic_menu_apply"
            android:title="@string/menu_apply_leave" />
        <item
            android:id="@+id/nav_create_time_sheet"
            android:icon="@drawable/ic_menu_create"
            android:title="@string/menu_create" />

    </group>
</menu>