<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.bnm.timesheet.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_account"
        android:name="com.bnm.timesheet.ui.account.FragmentCreateAccount"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_create_account" />

    <fragment
        android:id="@+id/nav_add_entry"
        android:name="com.bnm.timesheet.ui.entry.AddEntryFragment"
        android:label="@string/menu_add_entry"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_apply_leave"
        android:name="com.bnm.timesheet.ui.leave.ApplyLeaveFragment"
        android:label="@string/menu_apply_leave"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_create_time_sheet"
        android:name="com.bnm.timesheet.ui.create.CreateTimesheet"
        android:label="@string/menu_apply_leave"
        tools:layout="@layout/fragment_slideshow" />
</navigation>